# library-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 645282bc08f8_initial_tables.py  dc04a1577bc9_added_description_field_to_books.py
src/: main.py
src/api/: auth.py  books.py  borrowing.py  readers.py
src/core/: config.py  database.py  dependencies.py  security.py
src/models/: __init__.py  book.py  borrowing.py  reader.py  user.py
src/schemas/: auth.py  book.py  borrowing.py  reader.py
tests/: conftest.py  test_auth.py  test_books.py  test_borrowing.py  test_readers.py  test_security.py
